manifests/workloads/dvwa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulnerable-webapp
  namespace: vulnerable-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vulnerable-webapp
  template:
    metadata:
      labels:
        app: vulnerable-webapp
        security: monitored
    spec:
      containers:
        - name: webapp
          image: vulnerables/web-dvwa
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vulnerable-webapp-svc
  namespace: vulnerable-apps
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
  selector:
    app: vulnerable-webapp
